# raytracer-dp

./: README.md
src/: CMakeLists.txt  doxygen  main.cpp
src/acceleration/: bruteforce.cpp  bruteforce.h  grid.cpp  grid.h
src/core/: brdf.cpp  brdf.h  camera.cpp  camera.h  color.h  core.h  film.cpp  film.h  geometry.cpp  geometry.h  integrator.cpp  integrator.h  intersection.h  light.cpp  light.h  material.cpp  material.h  primitive.cpp  primitive.h  reference.h  renderer.cpp  renderer.h  scene.cpp  scene.h
